--- a/views/pledges-index.handlebars
+++ b/views/pledges-index.handlebars
@@ -4,6 +4,6 @@
 <a href="/pledges/new">Pledge</a>
 
 {{#each pledges}}
-  <h2>{{this.name}}</h2>
+<h2><a href="/pledges/{{this._id}}">{{this.name}}</a></h2>
   <small>{{this.amount}}</small>
 {{/each}}
