admin can edit and update pledges, but cannot login as admin yet to do so

--- a/views/pledges-index.handlebars
+++ b/views/pledges-index.handlebars
@@ -3,6 +3,8 @@
 
 <a href="/pledges/new">Pledge</a>
 
+<a href="/login">admin</a>
+
 {{#each pledges}}
 <h2><a href="/pledges/{{this._id}}">{{this.name}}</a></h2>
   <small>{{this.amount}}</small>
