--- a/views/pledges-new.handlebars
+++ b/views/pledges-new.handlebars
@@ -1,20 +1,11 @@
 <form method="POST" action="/pledges">
-  <fieldset>
-    <legend>New Pledge</legend>
-    <!-- TITLE -->
-    <p>
-      <label for="name">Name</label><br>
-      <input type="text" name="name" />
-    </p>
-    <p>
-      <label for="amount">Dollars</label><br>
-      <input type="text" name="amount" />
-    </p>
-  </fieldset>
+
+{{> pledges-form}}
 
   <!-- BUTTON -->
   <p>
     <button type="submit">Pledge!</button>
   </p>
 
+<a href="/">Cancel</a>
 </form>
