--- a/views/pledges-show-admin.handlebars
+++ b/views/pledges-show-admin.handlebars
@@ -2,4 +2,8 @@
 <h2>{{pledge.amount}}</h2>
 
 <p><a href="/pledges/{{pledge._id}}/edit">Edit Pledge</a></p>
+<!-- Delete button -->
+<p><form method="POST" action="/pledges/{{pledge._id}}?_method=DELETE">
+    <button type="submit">Delete</button>
+</form></p>
 <a href="/">Home</a>
