--- a/views/partials/pledges-form.handlebars
+++ b/views/partials/pledges-form.handlebars
@@ -1,12 +1,15 @@
 <fieldset>
   <legend>New Pledge</legend>
   <!-- TITLE -->
-  <p>
+
+     <div class="form-group">
     <label for="name">Name</label><br>
-    <input type="text" name="name" />
-  </p>
-  <p>
+    <input class="form-control" id="name" type="text" name="name" value="{{pledge.name}}"/>
+    </div>
+
+  <div class="form-group">
     <label for="amount">Dollars</label><br>
     <input type="text" name="amount" />
-  </p>
+    <input class="form-control" id="amount" type="text" name="amount" value="{{pledge.amount}}" />
+  </div>
 </fieldset>
