--- a/views/pledges-edit.handlebars
+++ b/views/pledges-edit.handlebars
@@ -1,3 +1,6 @@
+
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 <form method="POST" action="/pledges/{{pledge._id}}?_method=PUT">
 {{> pledges-form}}
 
@@ -9,3 +12,5 @@
 
  <a href="/">Home</a>
 </form>
+</div>
+</div>
