--- a/views/pledges-index.handlebars
+++ b/views/pledges-index.handlebars
@@ -1,11 +1,10 @@
 
-<h1>Pledges</h1>
+<h1>Thank you!</h1>
 
-<a href="/pledges/new">Pledge</a>
 
-<a href="/login">admin</a>
-
+<div class="row">
 {{#each pledges}}
 <h2><a href="/pledges/{{this._id}}">{{this.name}}</a></h2>
   <small>{{this.amount}}</small>
 {{/each}}
+ </div>
