--- a/views/pledges-new.handlebars
+++ b/views/pledges-new.handlebars
@@ -1,11 +1,15 @@
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 <form method="POST" action="/pledges">
 
 {{> pledges-form}}
 
   <!-- BUTTON -->
-  <p>
+  <div class="form-group">
     <button type="submit">Pledge!</button>
-  </p>
+ </div>
 
 <a href="/">Cancel</a>
 </form>
+</div>
+</div>
