--- a/views/pledges-show-admin.handlebars
+++ b/views/pledges-show-admin.handlebars
@@ -1,3 +1,6 @@
+
+<div class="row">
+    <div class="col-sm-6 col-sm-offset-3">
 <h1>{{pledge.name}}</h1>
 <h2>{{pledge.amount}}</h2>
 
@@ -7,3 +10,5 @@
     <button type="submit">Delete</button>
 </form></p>
 <a href="/">Home</a>
+</div>
+</div>
