--- a/views/pledges-show.handlebars
+++ b/views/pledges-show.handlebars
@@ -1,4 +1,10 @@
+
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 <h1>{{pledge.name}}</h1>
-<h2>{{pledge.amount}}</h2>
+<h2>${{pledge.amount}}</h2>
 
 <a href="/">Home</a>
+
+</div>
+</div>
