Users can see comments

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="/">
-        A Cure for Cancer
+        Towards A Cure
       </a>
     </div>
     <div class="pull-left">
