thank yous working

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -9,6 +9,7 @@
       <a href="/pledges/new" class="btn btn-default navbar-btn">Pledge Now!</a>
 </div>
     <div class="pull-right">
+    <a href="/about">about</a>
     <a href="/login">admin</a>
   </div>
 </nav>
