--- a/views/pledges-show.handlebars
+++ b/views/pledges-show.handlebars
@@ -7,8 +7,8 @@
 <hr>
 
     <!-- Show Comments -->
-    {{#each thank_yous}}
-      {{> thank_you}}
+    {{#each thankyous}}
+      {{> nonadmin-thankyou}}
     {{/each}}
 
 <a href="/">Home</a>
