did some styling with css and implemented the admin login-logout

--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,14 +1,23 @@
 <form method="Read" action="/about">
   <fieldset>
-    <legend>About</legend>
+    <legend><font color="white">About</font></legend>
 
-<p>
+    <style>
+
+    body {
+        background-color: #808080;
+    }
+    </style>
+<p><font color ="white">
   With your contribution we can reach our goal of finding a cure.
-  Pledge today! The finish line is within sight.
-</p>
-
+  Pledge today! The finish line is within sight. How many suns and how many moons
+  has it been since we have been stricken with this terrible disease?
+  I think we all can remember that fateful day that we first heard of this malady.
+  But how much longer must we wait until a cure is found, and this deadly illness
+  is eradicated from the face of the earth? How much longer, friend?
+</p></font>
   </fieldset>
 
+  <div class="pull-right"><a href="/"><font color="white">Home</font></a></div>
 
-<a href="/">Home</a>
 </form>
