--- a/views/partials/nonadmin-thankyou.handlebars
+++ b/views/partials/nonadmin-thankyou.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-block">
-    <h4 class="card-title">{{this.title}}</h4>
-    <p class="card-text">{{this.content}}</p>
+    <h4 class="card-title"><font color= "gold">{{this.title}}</font></h4>
+    <p class="card-text"><font color= "gold">{{this.content}}</font></p>
     </form></p>
   </div>
 </div>
