--- a/views/partials/pledges-form.handlebars
+++ b/views/partials/pledges-form.handlebars
@@ -1,14 +1,14 @@
 <fieldset>
-  <legend>New Pledge</legend>
+  <legend><font color="white">New Pledge</font></legend>
   <!-- TITLE -->
 
      <div class="form-group">
-    <label for="name">Name</label><br>
+    <label for="name"><font color="white">Name</font></label><br>
     <input class="form-control" id="name" type="text" name="name" value="{{pledge.name}}"/>
     </div>
 
   <div class="form-group">
-    <label for="amount">Dollars</label><br>
+    <label for="amount"><font color="white">Dollars</font></label><br>
     <input class="form-control" id="amount" type="text" name="amount" value="{{pledge.amount}}" />
   </div>
 </fieldset>
