--- a/views/pledges-new.handlebars
+++ b/views/pledges-new.handlebars
@@ -2,6 +2,13 @@
   <div class="col-sm-6 col-sm-offset-3">
 <form method="POST" action="/pledges">
 
+    <style>
+
+    body {
+        background-color: #808080;
+    }
+    </style>
+
 {{> pledges-form}}
 
   <!-- BUTTON -->
@@ -9,7 +16,9 @@
     <button type="submit">Pledge!</button>
  </div>
 
-<a href="/">Cancel</a>
+
+ <div class="pull-right"><a href="/"><font color="white">Cancel</font></a></div>
+
 </form>
 </div>
 </div>
