--- a/views/pledges-show.handlebars
+++ b/views/pledges-show.handlebars
@@ -1,17 +1,25 @@
 
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
-<h1>{{pledge.name}}</h1>
-<h2>${{pledge.amount}}</h2>
+<h1><font color="white">{{pledge.name}}</font></h1>
+<h2><font color="white">${{pledge.amount}}</font></h2>
 
 <hr>
+
+<style>
+
+body {
+    background-color: #808080;
+}
+</style>
+
 
     <!-- Show Comments -->
     {{#each thankyous}}
       {{> nonadmin-thankyou}}
     {{/each}}
 
-<a href="/">Home</a>
+<div class="pull-right"><a href="/"><font color="white">Home</font></a></div>
 
 </div>
 </div>
