--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -12,7 +12,7 @@
   With your contribution we can reach our goal of finding a cure.
   Pledge today! The finish line is within sight. How many suns and how many moons
   has it been since we have been stricken with this terrible disease?
-  I think we all can remember that fateful day that we first heard of this malady.
+  I think we all can remember that fateful day when we first heard of this malady.
   But how much longer must we wait until a cure is found, and this deadly illness
   is eradicated from the face of the earth? How much longer, friend?
 </p></font>
